<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/volume_up"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/volume_on_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bird"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                app:srcCompat="@drawable/bird"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/player_bird" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bird"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/enemy1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                app:srcCompat="@drawable/green_bee"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/enemy_bird_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enemy1"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/enemy2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                app:srcCompat="@drawable/red_bee"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/enemy_bird_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enemy2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/enemy3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                app:srcCompat="@drawable/grey_bee"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/enemy_bird_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enemy3"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/coin"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:padding="10dp"
                app:srcCompat="@drawable/coin"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/coin_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_10_points"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/info"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center"/>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@null"
        android:background="@drawable/background_start_button"
        android:text="@string/start_game"
        android:textSize="30sp"
        android:textColor="@android:color/holo_red_dark"/>
</LinearLayout>