<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/ivBird"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bird"
        android:contentDescription="@string/player_bird" />

    <TextView
        android:id="@+id/tvStartInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tap_to_play_game"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCoin1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/coin"
        tools:layout_editor_absoluteX="611dp"
        tools:layout_editor_absoluteY="40dp" />

    <ImageView
        android:id="@+id/ivCoin2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/coin"
        tools:layout_editor_absoluteX="611dp"
        tools:layout_editor_absoluteY="96dp" />

    <ImageView
        android:id="@+id/ivEnemy1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/red_bee"
        tools:layout_editor_absoluteX="601dp"
        tools:layout_editor_absoluteY="153dp" />

    <ImageView
        android:id="@+id/ivEnemy2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/green_bee"
        tools:layout_editor_absoluteX="601dp"
        tools:layout_editor_absoluteY="218dp" />

    <ImageView
        android:id="@+id/ivEnemy3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/grey_bee"
        tools:layout_editor_absoluteX="601dp"
        tools:layout_editor_absoluteY="293dp" />

    <ImageView
        android:id="@+id/ivCoinScore"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin"
        android:contentDescription="@string/coin_image" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/zero"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivCoinScore"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivHeartRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvScore"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/favorite_red"
        android:contentDescription="@string/heart_image" />

    <ImageView
        android:id="@+id/ivHeartMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/ivHeartRight"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/favorite_red"
        android:contentDescription="@string/heart_image" />

    <ImageView
        android:id="@+id/ivHeartLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/ivHeartMid"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/favorite_red"
        android:contentDescription="@string/heart_image" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        app:layout_constraintBottom_toBottomOf="@+id/btnMedium"
        app:layout_constraintEnd_toStartOf="@+id/btnNoMercy"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/btnMedium"
        app:layout_constraintTop_toTopOf="@+id/btnMedium"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:text="@string/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <Button
        android:id="@+id/btnNoMercy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:text="@string/no_mercy"
        app:layout_constraintBottom_toBottomOf="@+id/btnHard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnHard"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>